# mrelm

./: .gitignore  README.rst  pyproject.toml
mrelm/: __init__.py  __main__.py  git_utils.py  py_utils.py  utils.py
my_rel_gen/: __init__.py  __main__.py  git_utils.py  py_utils.py  utils.py
tests/: test_my_rel_gen.py
