[tool.poetry]
name = "mrelm"
version = "0.1.0"
license = "GPL-3.0-or-later"
description = "My release maker"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]

[tool.poetry.scripts]
mrelm = "mrelm.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
halo = "^0.0.31"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.7.2"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
